<resources>
    <string name="app_name">IDGS_9A11_SD_24_A2P2_NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">temperature</string>
    <string name="bonded_devices">Bonded Devices</string>
    <string name="textview">TextView</string>
    <string name="humidity_history">Humidity History</string>
    <string name="temperature_history">Temperature History</string>
</resources>