<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temperature"
            android:icon="?android:attr/textSelectHandleLeft"
            android:title="@string/temperature" />
        <item
            android:id="@+id/nav_humidity"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/humidity" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_bonded"
            android:icon="@drawable/bonded_icon"
            android:title="Bonded Devices" />
        <item
            android:id="@+id/nav_th"
            android:icon="@drawable/temperature_h"
            android:title="@string/temperature_history" />
        <item
            android:id="@+id/nav_hh"
            android:icon="@drawable/hum_h"
            android:title="@string/humidity_history" />
    </group>
</menu>